--- a/Lab4/recipe.css
+++ b/Lab4/recipe.css
@@ -7,7 +7,7 @@ body {
 }
 
 .background-image {
-  background-image: url('Natasha.jpg');
+  background-image: url('tresleches.jpg');
   background-size: cover;
   background-position: center;
   position: fixed;
