--- a/Lab4/recipe.css
+++ b/Lab4/recipe.css
@@ -2,20 +2,6 @@ body {
   background-color: #f2f2f2;
   color: #333333;
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-.background-image {
-  background-image: url('tresleches.jpg');
-  background-size: cover;
-  background-position: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
 }
 
 .container {
@@ -32,16 +18,6 @@ body {
   padding: 20px;
 }
 
-.category {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 20px;
-  background-color: #ffffff;
-  margin-bottom: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
 .side-element {
   width: 50%;
   box-sizing: border-box;
@@ -56,13 +32,22 @@ h2 {
   color: #0099cc;
 }
 
-h3 {
-  color: #666666;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
 }
 
-ul,
-ol {
-  margin-left: 30px;
+th,
+td {
+  border: 1px solid #333333;
+  padding: 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+  text-align: left;
 }
 
 a:link {
@@ -76,4 +61,5 @@ a:visited {
 a:hover {
   color: #ff0000;
 }
+
 
