--- a/Lab4/recipe.css
+++ b/Lab4/recipe.css
@@ -1,65 +1,49 @@
 body {
-  background-color: #f2f2f2;
-  color: #333333;
-  font-family: Arial, sans-serif;
+  background-image: url('tresleches.jpg');
+  background-size: cover;
+}
+
+.header-image {
+  width: 100%;
+  height: auto;
 }
 
 .container {
-  width: 80%;
-  margin: 0 auto;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
-  width: 50%;
-  box-sizing: border-box;
-  padding: 20px;
-}
-
-.side-element {
-  width: 50%;
-  box-sizing: border-box;
-  padding: 20px;
-}
-
-h1 {
-  color: #ff6600;
-}
-
-h2 {
-  color: #0099cc;
+  flex: 1;
 }
 
 table {
-  width: 100%;
-  border-collapse: collapse;
   margin-bottom: 20px;
 }
 
-th,
-td {
-  border: 1px solid #333333;
-  padding: 8px;
-}
-
 th {
-  background-color: #f2f2f2;
   font-weight: bold;
-  text-align: left;
 }
 
-a:link {
-  color: #990000;
+h1 {
+  font-size: 32px;
+  margin-bottom: 10px;
 }
 
-a:visited {
-  color: #990000;
+h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
-a:hover {
-  color: #ff0000;
+h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
 }
+
+p {
+  margin-bottom: 10px;
+}
+
 
 
