--- a/Lab4/recipe.css
+++ b/Lab4/recipe.css
@@ -3,46 +3,49 @@ body {
   background-size: cover;
 }
 
-.header-image {
-  width: 100%;
-  height: auto;
-}
-
 .container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  margin: 20px;
 }
 
 .content {
   flex: 1;
 }
 
+.side-element {
+  flex: 0.3;
+  background-color: lightgray;
+  padding: 10px;
+}
+
+h1, h2, h3 {
+  color: #333;
+}
+
 table {
   margin-bottom: 20px;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-th {
-  font-weight: bold;
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
 }
 
-h1 {
-  font-size: 32px;
-  margin-bottom: 10px;
+a {
+  text-decoration: none;
+  color: blue;
 }
 
-h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-h3 {
-  font-size: 20px;
-  margin-bottom: 10px;
+a:hover {
+  text-decoration: underline;
 }
 
 p {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 
